# dx-ai-studio

./: .coveragerc  .gitignore  README.md  dx_npu_stats.cpp  launcher.sh  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt
docs/: architecture.md  development.md  make_html.md  mkdocs.yml  requirements-docs.txt  testing.md
docs/source/: index.md
dx_agent_dev/: .gitignore  README.md  server.py
dx_agent_dev/core/: agent_runner.py  agents_config.py  config.py  conversation_store.py  environment.py  message_pipeline.py  message_sanitize.py  prompt_wrap.py  run_context.py  showcases.py
dx_agent_dev/templates/: index.html
dx_app/: README.md  dx_npu_stats  run.sh  server.py
dx_app/core/: _html_dom.py  assets.py  camera.py  catalogs.py  config.py  developer.py  dx_app_security.py  filesystem.py  forum.py  inference.py  inference_exec.py  lab_portal.py  live.py  models.py  modelzoo.py  modelzoo_gateway.py  performance.py  run_config.py  setup_steps.py
dx_app/templates/: index.html
dx_benchmark/: README.md  benchmark.sh  dataset.json  server.py
dx_benchmark/core/: __main__.py  aggregator.py  config.py  dashboard_builder.py  env_fingerprint.py  model_catalog.py  model_list.json  npu_monitor.py  npu_stats_util.py  pipeline_sweeps.py  report_models.py  report_renderers.py  reporter.py  result_layout.py  run_orchestrator.py  runner_contracts.py  runner_model.py  runner_pipeline.py
dx_benchmark/scripts/: sync_from_standalone.sh
dx_benchmark/templates/: index.html
dx_benchmark/tests/: test_sync_script.py
dx_compiler/: README.md  server.py
dx_compiler/core/: accuracy_check.py  compile_worker.py  compiler_bridge.py  compiler_service.py  config.py  html_export.py  log_capture.py  (+3 more)
dx_modelzoo/: README.md  server.py
dx_monitor/: README.md  server.py
dx_planner/: README.md  server.py
dx_stream/: README.md  server.py
launcher/: README.md  boot_animation.py  launcher.py  server.py
scripts/: apply_about_news_urls.py  enhance_about_data.py  i18n_audit_gate.sh  i18n_browser_audit.sh  i18n_smoke_matrix.sh  measure-hotspots.py  optimize-about-images.py  phase3_about_cleanup.py  quarterly_about_sync.py  run_ci.sh  ux_acceptance_gate.sh  video_inference_sweep.py
shared/: about_sync.py  auth_policy.py  catalog_sources.py  dx_server.py  hardware.py  paths.py  runtime.py
tests/: conftest.py  server_helpers.py  test_about_data.py  test_boot_animation.py  test_dx_app_setup_backend.py  test_hw_widget.py  test_iframe_lang_sync_browser.py  test_language_runtime_contracts.py  test_modelzoo_planner_static_performance.py  test_modelzoo_virtualized_performance.py  test_optional_markers_contract.py  test_packaging_contract.py  test_perf_audit.py  test_pytest_infra_contract.py  test_quarterly_about_sync.py  test_safe_perf_contracts.py  test_sandbox_release_exclusion.py  test_sdk_library_data.py  test_sdk_library_sidebar_style.py  test_shared_css_foundation.py  test_tutorial_copy_quality.py  test_tutorial_e2e_journey.py  test_tutorial_spotlight_spot_check.py  test_ux_visual_gate.py  test_visual_header_contract.py  test_zoom_full_audit.py  test_zoom_layout_contracts.py  test_zoom_modal_audit.py  tutorial_e2e_runner.py
tools/: backfill_dx_app_tutorial_es.py  backfill_sdk_tutorial_es.py  perf_audit.py  release_audit.py
(+644 files in other folders)
