[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dxstudio"
version = "0.1.1"
requires-python = ">=3.12"
# Core stays dependency-free ON PURPOSE: air-gapped boards bootstrap via
# `pip install -e .` with no PyPI access (launcher.sh/run.sh auto-install).
dependencies = []

[project.optional-dependencies]
# dx_app ModelZoo tab (dx_app/core/modelzoo.py): portal fetch + HTML parse.
# General-net boards: pip install -e ".[modelzoo]". Without it the tab
# degrades to an in-UI error; everything else runs on the stdlib alone.
modelzoo = [
  "beautifulsoup4>=4.12",
  "requests>=2.31",
]

[tool.setuptools]
packages = [
  "shared", "shared.chat", "launcher",
  "dx_app", "dx_app.core",
  "dx_modelzoo", "dx_modelzoo.core", "dx_modelzoo.metadata", "dx_modelzoo.tools",
  "dx_stream", "dx_stream.core",
  "dx_compiler", "dx_compiler.core",
  "dx_benchmark", "dx_benchmark.core",
  "dx_monitor", "dx_monitor.core",
  "dx_planner", "dx_planner.core",
  "dx_agent_dev", "dx_agent_dev.core", "dx_agent_dev.core.adapters",
]

[tool.setuptools.package-data]
"*" = ["templates/*", "templates/**/*", "static/**/*", "knowledge/*.md", "*.json"]
